tests/conformance/negative/17-invalid-param-type.sml
<!-- Invalid type attribute should be a validation error -->
<skill define="interface" name="bad-type">
  <param name="x" type="float">Unknown type</param>
</skill>
